# JaSlide

./: .env.example  .gitignore  README.md  docker-compose.offline.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
apps/api/: package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/renderer/: pyproject.toml
apps/renderer/src/: main.py
apps/renderer/src/generators/: pdf_exporter.py  pptx_generator.py
apps/renderer/src/services/: __init__.py  html_renderer.py  html_template.py  html_template_archive.py  pptx_to_html.py  style_extractor.py
apps/renderer/tests/: test_html_renderer.py  test_html_template.py  test_html_template_archive.py  test_pdf_exporter.py  test_pptx_generator.py  test_pptx_to_html.py  test_style_extractor.py
apps/web/: package.json  tailwind.config.js
apps/web/test/: editor-ai-chat.test.js  html-slide-editing.test.js  html-zip-template-upload.test.js  local-fonts.test.js  logout-handlers.test.js  offline-deployment.test.js  outline-approval.test.js  pptx-upload.test.js  skills-gallery.test.js  taeslide-object-editing.test.js  workspace-home.test.js
deploy/k8s/: jaslide-k8s.yaml  kustomization.yaml  namespace.yaml
docker/: api.Dockerfile  renderer.Dockerfile  web.Dockerfile
docs/: deployment.md  html-template-contract.md  offline-deployment.md
docs/superpowers/plans/: 2026-07-16-auth-keycloak-implementation.md  2026-07-16-genspark-style-home.md  2026-07-16-html-template-layout-implementation.md  (+14 more)
scripts/release/: build-amd64-images.sh
(+114 files in other folders)
